Clean up some pre-Java 17 smell
Signed-off-by: Mitch Gaffigan <mitch.gaffigan@comcast.net>